<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_class_1"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_1"/>
        <item
            android:id="@+id/nav_class_2"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_2"/>
        <item
            android:id="@+id/nav_class_3"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_3"/>
        <item
            android:id="@+id/nav_class_4"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_4"/>
        <item
            android:id="@+id/nav_class_5"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_5"/>
        <item
            android:id="@+id/nav_class_6"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_6"/>
        <item
            android:id="@+id/nav_class_7"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_7"/>
        <item
            android:id="@+id/nav_class_8"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_8"/>
        <item
            android:id="@+id/nav_class_9"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_9"/>
        <item
            android:id="@+id/nav_class_10"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_10"/>
        <item
            android:id="@+id/nav_class_11"
            android:icon="@drawable/ic_menu_a"
            android:title="@string/drawer_11"/>
        <!--<item-->
            <!--android:id="@+id/nav_class_12"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Twelfth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_13"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Thirteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_14"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="fourteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_15"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="fifteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_16"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="sixteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_17"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="seventeenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_18"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="eighteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_19"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="nineteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_20"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="twent"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_21"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Thirteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_22"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Thirteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_23"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Thirteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_24"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Thirteenth"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_class_25"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Thirteenth"/>-->
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
